Added some links href

--- a/index.html
+++ b/index.html
@@ -17,14 +17,14 @@
 				<ul>
 					<li><a href="#">Home</a></li>
 					<li><a href="#">What's New?</a></li>
-					<li><a href="#">Github</a></li>
+					<li><a href="https://github.com/Laritello/osu-music">Github</a></li>
 				</ul>
 			</header>
 			<div class="content">
 				<div class="textBox">
 					<h2>Simple player<br>for <span>osu!</span></h2>
 					<p>A simple and easy to use music player for osu! The perfect choice for those who love listening to their osu! library but does not want to suffer with importing music into regular player. This project is still under development.</p>
-					<a href="#">Download</a>
+					<a href="https://github.com/Laritello/osu-music/releases/download/0.2.7/Setup.exe">Download</a>
 				</div>
 				<div class="imgBox">
 					<video id="preview" autoplay muted loop>
