--- a/index.html
+++ b/index.html
@@ -2,7 +2,9 @@
 <html lang="en">
 	<head>
 		<meta charset="UTF-8">
-		<title>osu.Music</title>
+		<title>osu.Music | Simple music player for your osu! library</title>
+		<meta name="description" content="A simple and easy to use music player for osu! The perfect choice for those who love listening to their osu! library but does not want to suffer with importing music into regular player.">
+		<meta name="keywords" content="osu!, osu, music player">
 		<link rel="stylesheet" href="style.css">
 		<link rel="shortcut icon" type="image/x-icon" href="assets/favicon.svg"/>
 	</head>
