--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 		<section>
 			<div class="circle"></div>
 			<div class="credits">
-				<p>Developed by <a href="https://github.com/Laritello/osu-music">Laritello</a></p>
+				<p>Developed by <a href="https://github.com/Laritello">Laritello</a></p>
 				<p>Site template by <a href="https://www.youtube.com/c/OnlineTutorials4Designers">Online Tutorials</a></p>
 			</div>
 			<header>
