--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 				<a href="#" class="link"><span class="text">osu.</span><span class="text-colored">Music</span></a>
 				<ul>
 					<li><a href="https://github.com/Laritello/osu-music#readme">About</a></li>
-					<li><a href="https://github.com/Laritello/osu-music#readme">What's New?</a></li>
+					<li><a href="https://github.com/Laritello/osu-music/releases/latest">What's New?</a></li>
 					<li><a href="https://github.com/Laritello/osu-music">Github</a></li>
 				</ul>
 			</header>
